--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,3 @@
 
 
-<h1><%= link_to @song.artist.name, artist_path(@song.artist) %></h1>
+<h1><%= link_to @song.artist_name, artist_path(@song.artist) %></h1>
