--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,9 +3,9 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.label "All Songs" %>
+  <%= f.collection_select :artist_id, @artists, :id, :name %>
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
